// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceSelector should render empty device list, expanded 1`] = `
<Dropdown
  className="core-padded-row"
  disabled={true}
  id="device-selector"
  onToggle={[Function]}
  open={true}
>
  <DropdownToggle
    className="core-device-selector core-btn btn-primary"
    title="Select device"
  />
  <DropdownMenu
    className="core-dropdown-menu"
    id="device-selector-list"
  />
</Dropdown>
`;

exports[`DeviceSelector should render empty device list, not expanded 1`] = `
<Dropdown
  className="core-padded-row"
  disabled={true}
  id="device-selector"
  onToggle={[Function]}
  open={false}
>
  <DropdownToggle
    className="core-device-selector core-btn btn-primary"
    title="Select device"
  />
  <DropdownMenu
    className="core-dropdown-menu"
    id="device-selector-list"
  />
</Dropdown>
`;

exports[`DeviceSelector should render one device with serialport, usb, and jlink traits 1`] = `
<Dropdown
  className="core-padded-row"
  disabled={false}
  id="device-selector"
  onToggle={[Function]}
  open={true}
>
  <DropdownToggle
    className="core-device-selector core-btn btn-primary"
    title="Select device"
  />
  <DropdownMenu
    className="core-dropdown-menu"
    id="device-selector-list"
  >
    <MenuItem
      className="core-device-selector-item btn-primary"
      onSelect={[Function]}
    >
      <div>
        123456789
      </div>
      <ul
        className="core-device-selector-item-details"
      >
        <li>
          Serial port: 
          /dev/ttyACM0
        </li>
        <li>
          USB: 
          Nordic Semiconductor
           
          nRF52 USB
        </li>
        <li>
          Debug probe
        </li>
      </ul>
    </MenuItem>
  </DropdownMenu>
</Dropdown>
`;
